feat(projects): 增加删除购物车接口
